--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-warning sticky-top">
-      <a class="navbar-brand" href="#">Flepu's Kitchen</a>
+      <a class="navbar-brand" href="#">
+      <img src="images/Chef2.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+      Flepu's Kitchen</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
