--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <a class="navbar-brand" href="index.html">
       <img src="images/Chef2.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
       Flepu's Kitchen</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -36,7 +40,7 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
         </ul>
-      </div>
+      </div>  
     </nav>
   <!--End Navbar-->
   
